--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       </button>
      
      <div class="navbar-inner">
-        <a class="brand" href="#">E-Business Task List</a>    
+        <a class="brand" href="#">E-Business Task List | Kenya Power Ltd</a> 
         
         <ul class="nav pull-right">
               <li class="notification-dropdown hidden-phone">
@@ -127,7 +127,7 @@
                     <span>Approval Request</span>
                     <i class="icon-chevron-up"></i>
                 </a>
-                <ul class="submenu">
+                <ul class="submenu second-menu">
                     <li><a href="user-list.html">New Request(2)</a></li>
                     <li><a href="new-user.html">Recent Approvals(2)</a></li>
                     <li><a href="user-profile.html">Flagged(2)</a></li>
@@ -303,32 +303,39 @@
                 </div>
           </div>
 
-          <div class="row-fluid">       
-           <strong>LPO/JK/0106/13</strong><br/>
+          <div class="row-fluid content-area">       
+           <h5><strong>LPO/JK/0106/13</strong></h5>
            Value: Ksh 556,000<br/>
+           Purchase Order for the Purchase of Daily Cows.<br>
+           Purchase Order for the Purchase of Daily Cows
+           Purchase Order for the Purchase of Daily Cows
+           Purchase Order for the Purchase of Daily Cows
+           Purchase Order for the Purchase of Daily Cows
            Purchase Order for the Purchase of Daily Cows
            <div>
 
            <div class="attachment-section row-fluid">
+             <strong>Attatchments:</strong><br/>
              <i class="icon-paper-clip icon-large"></i>
-             <img src="img/image_holder.png" class="img-polaroid" height="50px" width="50px">
-             Scanned_Invoince.jpg
-             <a>View Download</a>
+               <img src="img/image_holder.png" class="img-polaroid" height="50px" width="50px">
+                Scanned_Invoince.jpg
+               <a href="#">View</a>
+               <a href="#">Download</a>
             </div>
 
 
-            <div class="row-fluid">
-              <strong>Status:</strong><br/>
-              <span class="label label-success"><i class="icon-ok-circle"></i>CREATED</span>
-              <span class="label label-default"><i class="icon-ok-circle"></i>HOD APPROVAL</span>
-              <span class="label label-default"><i class="icon-ok-circle"></i>FINANCE APPROVAL</span>
-              <span class="label label-default"><i class="icon-ok-circle"></i>CEO APPROVAL</span>
+            <div class="status-section row-fluid">
+              <strong>Document Status:</strong><br/>
+              <span class="label label-success"><i class="icon-ok-circle"></i>CREATED</span><i class="icon-chevron-right"></i>
+              <span class="label label-default"><i class="icon-remove-circle"></i>HOD APPROVAL</span><i class="icon-chevron-right"></i>
+              <span class="label label-default"><i class="icon-remove-circle"></i>FINANCE APPROVAL</span><i class="icon-chevron-right"></i>
+              <span class="label label-default"><i class="icon-remove-circle"></i>CEO APPROVAL</span>
             </div>
             <hr/>
 
-             <div class="row-fluid">
+             <div class="row-fluid comment-section">
             <strong>Comments:</strong><br/>
-            <textarea name="comments" width="100%"></textarea>
+            <textarea name="comments"></textarea>
             <div class="well"><a class="btn-success btn-large pull-right" type="button">Save</a></div>
              </div>  
 
